--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+                src="img/nat-1-large.jpg"
+              />
+              <img
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 2000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+                src="img/nat-2-large.jpg"
+              />
+              <img
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 3000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+                src="img/nat-1-large.jpg"
+              />
+
+              <!-- <img
                 src="img/nat-1-large.jpg"
                 alt="Photo 1"
                 class="composition__photo composition__photo--p1"
@@ -114,7 +136,7 @@
                 src="img/nat-3-large.jpg"
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
-              />
+              /> -->
             </div>
           </div>
         </div>
@@ -426,7 +448,22 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+        <!-- art direction (different images for different viewport widths) media queries for images -->
+        <picture class="footer__logo">
+          <source
+            srcset="
+              img/logo-green-small-1x.png 1x,
+              img/logo-green-small-2x.png 2x
+            "
+            media="(max-width: 37.5em)"
+          />
+          <!-- srcset used for density switching  -->
+          <img
+            srcset="img/logo-green-1x.png 1x, img/logo-green-2x 2x"
+            alt="Full logo"
+            src="img/logo-green-2x"
+          />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
