--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+    <!--link rel="stylesheet" href="css/icon-font.css" />-->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -102,21 +102,21 @@
             <div class="composition">
               <img
                 srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vh, 300px"
                 alt="photo 1"
                 class="composition__photo composition__photo--p1"
                 src="img/nat-1-large.jpg"
               />
               <img
                 srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 2000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vh, 300px"
                 alt="photo 2"
                 class="composition__photo composition__photo--p2"
                 src="img/nat-2-large.jpg"
               />
               <img
                 srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 3000w"
-                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vh, 300px"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vh, 300px"
                 alt="photo 3"
                 class="composition__photo composition__photo--p3"
                 src="img/nat-1-large.jpg"
